# supercharge-ai-dev

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  databricks.yml  main.py  project_config.yml  pyproject.toml
.github/: BRANCH_PROTECTION.md  SECRETS.md
.github/workflows/: deploy.yml  pr-preview.yml  test.yml  validate-gitflow.yml
docs/: ARCHITECTURE.md  CI-CD-STANDARDS.md  DAB_FILE_SYNC.md  DEPLOYMENT.md  GITFLOW.md  SETUP.md
docs/superpowers/plans/: 2026-04-16-aidevkit-dab-integration.md  2026-04-17-dab-resource-segregation-implementation.md
docs/superpowers/specs/: 2026-04-17-dab-resource-segregation-design.md
notebooks/: 01_ingest_media_customer_reviews.py  02_extract_media_customer_review_insights.py  03_deploy_media_customer_insights_genie_space.py  1_hello_world.py  2_config_usage.py
resources/: config_demo_job.yml  deploy_media_customer_insights_genie_space_job.yml  extract_media_customer_review_insights_job.yml  hello_world_job.yml  ingest_media_customer_reviews_job.yml
scripts/: setup-branch-protection.sh
src/supercharge_ai/: __init__.py  config.py  genie.py  logger.py  utils.py
tests/: __init__.py  conftest.py  test_imports.py
tests/unit/: __init__.py  test_config.py  test_genie.py  test_logger.py
